fixing review spacing

--- a/style.css
+++ b/style.css
@@ -182,12 +182,12 @@ h1{
     align-items:center ;
     text-align: center;
     padding: 35px;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .textBox span{
     margin-left: 70%;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 .reviewPhoto img{
     width: 60%;
